--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
